Fix sidebar spacing that got changed due to a UIKIT upgrade.

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -121,7 +121,7 @@ body {
 
     li a {
         .uk-icon {
-            margin-right: 10px;
+            margin-right: 6px;
         }
 
         display: flex;
